--- a/index.html
+++ b/index.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Hola soy Henrry</h1>
+    <p>Soy un estudiante de ingeniería en sistemas de información.</p>
+    <h2>Educación</h2>
+    <ul>
+        <li>Primaria: Sección A</li>
+        <li>Secundaria: Sección B</li>
+        <li>Universidad: Ingeniería en Sistemas de Información</li>
+    </ul>
+    <h2>Experiencia Laboral</h2>
+    <ul>
+        <li>Empresa 1: Desarrollador Web</li>
+        <li>Empresa 2: Analista de Sistemas</li>
+    </ul>
+    <h2>Conocimientos</h2>
+    <ul>
+        <li>Lenguajes: Python, JavaScript, HTML, CSS</li>
+        <li>Frameworks: React</li>
+        <li>Bases de datos: MySQL, PostgreSQL</li>
+    </ul>
 </body>
 </html>
