--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Portafolio | Henrry Soto</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -50,7 +51,7 @@
     
         <div class="about-container">
             <div class="about-img">
-                <img src="/images/about.jpg" alt="Foto de Henrry Soto">
+                <img src="/img/about.jpg" alt="Foto de Henrry Soto">
                 <span class="circle-spin"></span>
             </div>
     
