cambios de lugar de las imagenes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
         <div class="about-container">
             <div class="about-img">
-                <img href="/images/about.jpg" alt="Foto de Henrry Soto">
+                <img href="about.jpg" alt="Foto de Henrry Soto">
                 <span class="circle-spin"></span>
             </div>
     
