Errores en html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="Chrome">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio | Henrry Soto</title>
     <link rel="stylesheet" href="css/styles.css">
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <a href="#" class="logo">Portafolio Digital</a>
-        <div lass="bx bx-menu" id="menu-icon"></div>
+        <div id="menu-icon"></div>
         <nav class="navbar">
             <a href="#home" class="active" >Inicio</a>
             <a href="#about">Acerca</a>
