--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     
         <div class="about-container">
             <div class="about-img">
-                <img src="/images/about.webp" alt="Foto de Henrry Soto">
+                <!-- <img src="/images/about.webp" alt="Foto de Henrry Soto"> -->
+                <p style="background-image: url('/images/about.jpg');"></p>
                 <span class="circle-spin"></span>
             </div>
     
