se arreglo las imagenes, el css de las barras de porcentaje de los skills tambien se agrego la funcionalidad a al formulario de contacto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#about">Acerca</a>
             <a href="#education">Educación</a>
             <a href="#skills">Habilidades</a>
-            <a href="#contact">Contactos</a>
+            <a href="#contactForm">Contactos</a>
         </nav>
     </header>
     <section class="home" id="home">
@@ -51,7 +51,7 @@
     
         <div class="about-container">
             <div class="about-img">
-                <img src="images/about.jpg" alt="Foto de Henrry Soto"> 
+                <img src="images/foto_Henrry_Soto.jpg" alt="Foto de Henrry Soto"> 
                 <!--<p style="background-image: url('/images/about.jpg');"></p>-->
                 <span class="circle-spin"></span>
             </div>
@@ -182,7 +182,7 @@
             </div>
         </div>
     </section>
-    <section class="contact" id="contact">
+    <section class="contact" id="contactForm">
         <h2 class="heading">Contacto<span> ¡Escríbeme!</span></h2>
     
         <form action="#" method="post">
